Add ICS generation
